# SLAP2_Utils

./: .buildinfo  .gitattributes  .gitignore  MANIFEST.in  README.md  SLAP2_Utils_example.html  Slap2 Utils Test.ipynb  acquisitioncontainer.html  datafile.html  datafile.py  demo_SLAP2_Util_TraceExtraction.ipynb  file_header.html  fileheader.html  genindex.html  haasSlap2UI.asv  haasSlap2UI.m  index.html  installation.html  main.py  metadata.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  slapROI.html  timeTest.py  trace.html  tracePixel.html  viewer.html
.doctrees/: SLAP2_Utils_example.doctree  environment.pickle  index.doctree  installation.doctree  viewer.doctree
.doctrees/modules/: acquisitioncontainer.doctree  datafile.doctree  file_header.doctree  imagestacks.doctree  index.doctree  metadata.doctree  plots.slap2Plots.doctree  roi_utils.doctree  slapROI.doctree  stim.doctree  trace.doctree  tracePixel.doctree  tracefunctions.doctree
.github/workflows/: draft-pdf.yml  publish-to-pypi.yml  python-test.yml  sphinx.yml
.ipynb_checkpoints/: Slap2 Utils Test-checkpoint.ipynb
_modules/: index.html
_modules/slap2_utils/: datafile.html
_sources/: acquisitioncontainer.rst.txt  datafile.rst.txt  file_header.rst.txt  fileheader.rst.txt  index.rst.txt  installation.rst.txt  metadata.rst.txt  modules.rst.txt  trace.rst.txt  tracePixel.rst.txt
_sources/modules/: acquisitioncontainer.rst.txt  imagestacks.rst.txt  index.rst.txt  metadata.rst.txt  plots.slap2Plots.rst.txt  slapROI.rst.txt
docs/source/: SLAP2_Utils_example.ipynb  acquisitioncontainer.rst  conf.py  datafile.rst  index.rst  installation.rst  metadata.rst  modules.rst  slapROI.rst  viewer.rst
functions/: imagestacks.py
modules/: acquisitioncontainer.html  datafile.html  file_header.html  imagestacks.html  index.html  metadata.html  plots.slap2Plots.html  roi_utils.html  slapROI.html  stim.html  trace.html  tracePixel.html  tracefunctions.html
paper/: paper.bib  paper.docx  paper.md
slap2_utils/: __init__.py  datafile.py  fast_line_data.pyx
slap2_utils/dataviewer/: CAL590_Experiments.ipynb  cli.py  dataviewer.py  mainWindow.py  pixelTraces.py  roiPlot.py  roiTraces.py
slap2_utils/examples/: SLAP2_Utils_example.ipynb
slap2_utils/experiments/: haasSlap2UI.asv  haasSlap2UI.m  somaROI.py  somaROIsys.py
slap2_utils/filters/: filters.py
slap2_utils/functions/: DouglasPeucker.py  _masked_phase_cross_correlation.py  _phase_cross_correlation.py  autoROI.py  imagestacks.py  otsuROI.py  stim.py  test_object_segmenter_from_folders.cl  tracefunctions.py  unetROI.py  xyzshift.py  xyzshift_ui.py
slap2_utils/keras_process/: auto_extract_data.py  keras_data_process.py
slap2_utils/segmentation/: segmentation.py
slap2_utils/subclasses/: acquisitionContainer.py  metadata.py  slapROI.py
slap2_utils/utils/: file_header.py  roi_utils.py  trace.py  trace_average.py  trace_pixel.py
slap2_utils/visual_stim/: .VisStimGUI.m.swp  (+16 more)
subclasses/: acquisitionContainer.py  metadata.py  slapROI.py
test/: test_plots.py  test_roi_utils.py  test_slap2Uitls.py  test_stacks.py  test_stim.py  test_trace.py
utils/: Trace.py  TracePixel.py  file_header.py  file_header_v1.py  trace.py  trace_pixel.py
(+49 files in other folders)
