[project]
name = "SLAP2_UTILS"
version = "0.3.0"
authors = [
  { name="Peter Hogg", email="peter.hogg@ubc.ca" },
  { name="Jerry Tong", email="jerrytong0810@gmail.com" }
]
description = "Code to support using a SLAP2 Microscope"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.23.5",
    "scipy",
    "h5py",
    "scikit-image",
    "PyQT6",
    "matplotlib",
    "vispy",
    "notebook",
    "pyneurotrace"
        
]

[project.optional-dependencies]
CUPY = ["cupy"]
cuda11x = ["cupy-cuda11x"]
cuda12x = ["cupy-cuda12x"]


[project.urls]
Homepage = "https://github.com/Peter-Hogg/SLAP2_Utils"
Issues = "https://github.com/Peter-Hogg/SLAP2_Utils/issues"
